# gcp_model_deploy_example

./: Dockerfile  README.md  makefile  pyproject.toml
.github/workflows/: CICD.yml
ner_app/: __init__.py  app.py  ner_model.py
tests/locust/: locustfile.py
tests/unit/: test_ner_model.py
