[tool.poetry]
name = "ner_app"
version = "0.0.1"
description = ""
authors = ["youness <dummuy@dummy.dummy>"]
packages = [
    { include = "ner_app"},
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
spacy = "^3.3.1"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.3.0/en_core_web_md-3.3.0-py3-none-any.whl"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
locust = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"